--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "affixed",
   "description": "Make your containers affixed",
   "version": "0.1.0",
+  "main": "lib/index.js",
   "keywords": [
     "affix",
     "sticky",
@@ -38,5 +39,27 @@
       "url": "https://opensource.org/licenses/MIT"
     }
   ],
-  "homepage": "https://github.com/vutran/affixed"
+  "homepage": "https://github.com/vutran/affixed",
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.4",
+    "babel-eslint": "^6.0.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^2.5.3",
+    "eslint-config-airbnb": "^6.2.0",
+    "eventsource-polyfill": "^0.9.6",
+    "rimraf": "^2.5.2",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "scripts": {
+    "clean": "rimraf lib",
+    "lint": "eslint ./src",
+    "compile": "babel ./src -d ./lib",
+    "build": "npm run clean && npm run compile",
+    "dev": "webpack-dev-server --content-base examples/ --config examples/webpack.config.js --inline --hot",
+    "prepublish": "npm run build"
+  }
 }
