--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "description": "Make your containers affixed",
   "version": "0.2.1",
   "main": "lib/index.js",
+  "files": [
+    "src",
+    "LICENSE",
+    "README"
+  ],
   "keywords": [
     "affix",
     "sticky",
@@ -27,32 +32,23 @@
   "bugs": {
     "web": "https://github.com/vutran/affixed/issues"
   },
-  "repositories": [
-    {
-      "type": "git",
-      "url": "git@github.com:vutran/affixed.git"
-    }
-  ],
-  "licenses": [
-    {
-      "name": "MIT",
-      "url": "https://opensource.org/licenses/MIT"
-    }
-  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:vutran/affixed.git"
+  },
+  "license": "MIT",
   "homepage": "https://github.com/vutran/affixed",
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.4",
-    "babel-eslint": "^6.0.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^2.5.3",
-    "eslint-config-airbnb": "^6.2.0",
-    "eventsource-polyfill": "^0.9.6",
-    "rimraf": "^2.5.2",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb-base": "^5.0.3",
+    "eslint-plugin-import": "^1.14.0",
+    "rimraf": "^2.5.4",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.0"
   },
   "scripts": {
     "clean": "rimraf lib",
@@ -63,6 +59,6 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "lodash": "^4.7.0"
+    "lodash.throttle": "^4.1.1"
   }
 }
